CSS responsive fixes for 800px breakpoints not covered by standard GDS break points.

--- a/src/assets/scss/components/_summary-list.scss
+++ b/src/assets/scss/components/_summary-list.scss
@@ -24,3 +24,9 @@
     }
   }
 }
+
+.govuk-summary-list__row {
+  .govuk-summary-list__key.govuk-summary-list__key___remove-pad-right {
+    padding-right: 0;
+  }
+}
